--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -346,15 +346,17 @@ Navigation
 /* ==========================================================================
 Hero
 ========================================================================== */
+
 .hero {
   min-height: 750px;
-  background: url('../img/hero-min.jpg') center center;
+  background: url('../img/hero.jpg') center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   position: relative;
 
+  
   /*.rsvp-btn {
     position: absolute;
     bottom: 100px;
@@ -471,6 +473,18 @@ header {
     right: 0;
     top: 41px;
     transition: all 300ms ease-in-out;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero {
+    min-height: 1100px; /* Adjust the value for desktop screens */
+    background: url('../img/hero-min.jpg') center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    position: relative;
   }
 }
 
